[printing] avoid page breaks inside table rows just as timeline rows

--- a/app/assets/stylesheets/layout/_print.sass
+++ b/app/assets/stylesheets/layout/_print.sass
@@ -117,6 +117,9 @@
                     // Do not repeat header on second printed page
                     display: table-row-group
 
+                  tr.wp-table--row
+                    page-break-inside: avoid
+
                 .wp-table--details-column
                   display: none // remove column for info icon.
 
